[tool.poetry]
name = "prime_st3204"
version = "0.1.0"
description = "This is QMSS package for learning MDS."
authors = ["Shuaitao Tan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
